<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rep Max Calculator</string>
    <string name="about_rep_max_calculator">About Rep Max Calculator</string>
    <string name="about_text">\nRep Max Calculator helps you calculate a *RM from your existing stats. Select a number
        of reps that you know your weight for, and it will calculate the others based on a specific formula. You can
        choose from any of the popular formulas, or use an average of them all.\n\nWarning to&#160;<a
                href="com.doomonafireball.bodybalance://dyel">curl bros</a>: the calculated
        numbers can be humbling.\n\nI hope you find it easy to use and am always open to feedback!
    </string>
    <string name="about_dev">\nDeveloped by\nDoom on a Fireball Studios\ndoomonafireball@gmail.com</string>
    <string name="dyel">DYEL</string>
    <string name="eula">End User License Agreement</string>
    <string name="eula_text">This software is provided as-is, with no warranty of any kind.\n\nYour usage of this
        app is done at your own risk, and in no event shall the developer be liable for personal injury or any
        incidental, special, indirect, or consequential damages whatsoever.
    </string>
    <string name="ok">OK</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="num_zero">0</string>
    <string name="clr_c">CLR</string>
    <string name="del_c">DEL</string>
    <string name="tap_to_copy">Long press a value to copy it to your clipboard.</string>
    <string name="kg_input">kg (input)</string>
    <string name="lbs_input">lbs (input)</string>
    <string name="kg_converted">kg (converted)</string>
    <string name="lbs_converted">lbs (converted)</string>
    <string name="pounds_to_kg">Lbs./Kg Calculator</string>
    <string name="copy_text">%1$s was copied to the clipboard!</string>
    <string name="paste">Paste</string>
    <string name="pasted_text">Pasted text could not be read as a number!</string>
    <string name="one_rm">1RM</string>
    <string name="two_rm">2RM</string>
    <string name="three_rm">3RM</string>
    <string name="four_rm">4RM</string>
    <string name="five_rm">5RM</string>
    <string name="six_rm">6RM</string>
    <string name="seven_rm">7RM</string>
    <string name="eight_rm">8RM</string>
    <string name="nine_rm">9RM</string>
    <string name="ten_rm">10RM</string>
    <string name="eleven_rm">11RM</string>
    <string name="twelve_rm">12RM</string>
    <string name="lbs">lbs.</string>
    <string name="kg">kg</string>
    <string name="rep_max_formulas">Rep Max Formulas"</string>
    <string name="rep_max_formulas_text">\nTap an RM to focus the input on that specific rep range. Long press to copy
        the value to the device clipboard.\n\nRM formulas are derived from the equations listed in this
        <a href="http://en.wikipedia.org/wiki/One-repetition_maximum">Wikipedia</a>
        article. Body Balance first calculates your 1RM based on your input, then calculates the remaining RM values
        from the 1RM.
    </string>
    <string name="units">Units</string>
    <string name="about">About</string>
    <string name="units_imperial">Units:
        <b>Imperial (lbs.)</b>
    </string>
    <string name="units_metric">Units:
        <b>Metric (kg)</b>
    </string>
    <string name="settings">Settings</string>

    <string name="brzycki">Brzycki</string>
    <string name="epley">Epley</string>
    <string name="lander">Lander</string>
    <string name="lombardi">Lombardi</string>
    <string name="mayhew">Mayhew et al.</string>
    <string name="o_conner">O\'Conner et al.</string>
    <string name="wathan">Wathan</string>
    <string name="average">Average</string>
    <string-array name="rm_formulas">
        <item>@string/brzycki</item>
        <item>@string/epley</item>
        <item>@string/lander</item>
        <item>@string/lombardi</item>
        <item>@string/mayhew</item>
        <item>@string/o_conner</item>
        <item>@string/wathan</item>
        <item>@string/average</item>
    </string-array>
</resources>
