<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        style="@style/FillWidth"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:oak="http://oak/oak/schema"
        android:id="@id/numbers_container"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
    <LinearLayout
            style="@style/FillWidth"
            android:gravity="center_vertical">
        <oak.widget.TextViewWithFont
                style="@style/RepMaxNumberTextView"
                android:id="@+id/one"
                android:text="@string/num_one"
                oak:font="Roboto-Thin.ttf"/>
        <oak.widget.TextViewWithFont
                style="@style/RepMaxNumberTextView"
                android:id="@+id/two"
                android:text="@string/num_two"
                oak:font="Roboto-Thin.ttf"/>
        <oak.widget.TextViewWithFont
                style="@style/RepMaxNumberTextView"
                android:id="@+id/three"
                android:text="@string/num_three"
                oak:font="Roboto-Thin.ttf"/>
    </LinearLayout>
    <LinearLayout
            style="@style/FillWidth"
            android:gravity="center_vertical">
        <oak.widget.TextViewWithFont
                style="@style/RepMaxNumberTextView"
                android:id="@+id/four"
                android:text="@string/num_four"
                oak:font="Roboto-Thin.ttf"/>
        <oak.widget.TextViewWithFont
                style="@style/RepMaxNumberTextView"
                android:id="@+id/five"
                android:text="@string/num_five"
                oak:font="Roboto-Thin.ttf"/>
        <oak.widget.TextViewWithFont
                style="@style/RepMaxNumberTextView"
                android:id="@+id/six"
                android:text="@string/num_six"
                oak:font="Roboto-Thin.ttf"/>
    </LinearLayout>
    <LinearLayout
            style="@style/FillWidth"
            android:gravity="center_vertical">
        <oak.widget.TextViewWithFont
                style="@style/RepMaxNumberTextView"
                android:id="@+id/seven"
                android:text="@string/num_seven"
                oak:font="Roboto-Thin.ttf"/>
        <oak.widget.TextViewWithFont
                style="@style/RepMaxNumberTextView"
                android:id="@+id/eight"
                android:text="@string/num_eight"
                oak:font="Roboto-Thin.ttf"/>
        <oak.widget.TextViewWithFont
                style="@style/RepMaxNumberTextView"
                android:id="@+id/nine"
                android:text="@string/num_nine"
                oak:font="Roboto-Thin.ttf"/>
    </LinearLayout>
    <RelativeLayout
            style="@style/FillWidth">
        <oak.widget.TextViewWithFont
                style="@style/RepMaxNumberTextView"
                android:id="@+id/invisible_zero"
                android:layout_width="fill_parent"
                android:visibility="invisible"
                android:text="@string/num_zero"
                oak:font="Roboto-Thin.ttf"/>
        <LinearLayout
                style="@style/FillWidth"
                android:layout_alignTop="@id/invisible_zero"
                android:layout_alignBottom="@id/invisible_zero"
                android:gravity="center_vertical">
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:layout_height="fill_parent"
                    android:id="@+id/clr"
                    android:text="@string/clr_c"
                    android:textSize="@dimen/default_text_size_header"
                    android:onClick="onClrClick"
                    oak:font="Roboto-Thin.ttf"/>
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/zero"
                    android:text="@string/num_zero"
                    oak:font="Roboto-Thin.ttf"/>
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:layout_height="fill_parent"
                    android:id="@+id/del"
                    android:text="@string/del_c"
                    android:textSize="@dimen/default_text_size_header"
                    android:onClick="onDelClick"
                    oak:font="Roboto-Thin.ttf"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>