<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_conversion"
            android:icon="@drawable/ic_action_lbkg"
            android:title="@string/pounds_to_kg"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_paste"
            android:icon="@drawable/ic_menu_paste_holo_dark"
            android:title="@string/paste"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_rep_max_forumlas"
            android:icon="@drawable/ic_menu_info_details"
            android:title="@string/rep_max_formulas"
            android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_preferences"
            android:title="@string/settings"
            android:showAsAction="ifRoom"/>
</menu>