<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        style="@style/Fill"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:oak="http://oak/oak/schema"
        xmlns:repmaxcalculator="http://schemas.android.com/apk/res/com.doomonafireball.repmaxcalculator">
    <LinearLayout
            style="@style/FillWidth"
            android:id="@+id/numbers_container"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
        <LinearLayout
                style="@style/FillWidth"
                android:gravity="center_vertical">
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/one"
                    android:text="@string/num_one"
                    oak:font="Roboto-Thin.ttf"/>
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/two"
                    android:text="@string/num_two"
                    oak:font="Roboto-Thin.ttf"/>
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/three"
                    android:text="@string/num_three"
                    oak:font="Roboto-Thin.ttf"/>
        </LinearLayout>
        <LinearLayout
                style="@style/FillWidth"
                android:gravity="center_vertical">
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/four"
                    android:text="@string/num_four"
                    oak:font="Roboto-Thin.ttf"/>
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/five"
                    android:text="@string/num_five"
                    oak:font="Roboto-Thin.ttf"/>
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/six"
                    android:text="@string/num_six"
                    oak:font="Roboto-Thin.ttf"/>
        </LinearLayout>
        <LinearLayout
                style="@style/FillWidth"
                android:gravity="center_vertical">
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/seven"
                    android:text="@string/num_seven"
                    oak:font="Roboto-Thin.ttf"/>
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/eight"
                    android:text="@string/num_eight"
                    oak:font="Roboto-Thin.ttf"/>
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/nine"
                    android:text="@string/num_nine"
                    oak:font="Roboto-Thin.ttf"/>
        </LinearLayout>
        <RelativeLayout
                style="@style/FillWidth">
            <oak.widget.TextViewWithFont
                    style="@style/RepMaxNumberTextView"
                    android:id="@+id/invisible_zero"
                    android:layout_width="fill_parent"
                    android:visibility="invisible"
                    android:text="@string/num_zero"
                    oak:font="Roboto-Thin.ttf"/>
            <LinearLayout
                    style="@style/FillWidth"
                    android:layout_alignTop="@id/invisible_zero"
                    android:layout_alignBottom="@id/invisible_zero"
                    android:gravity="center_vertical">
                <oak.widget.TextViewWithFont
                        style="@style/RepMaxNumberTextView"
                        android:layout_height="fill_parent"
                        android:id="@+id/clr"
                        android:text="@string/clr_c"
                        android:textSize="@dimen/default_text_size_header"
                        android:onClick="onClrClick"
                        oak:font="Roboto-Thin.ttf"/>
                <oak.widget.TextViewWithFont
                        style="@style/RepMaxNumberTextView"
                        android:id="@+id/zero"
                        android:text="@string/num_zero"
                        oak:font="Roboto-Thin.ttf"/>
                <oak.widget.TextViewWithFont
                        style="@style/RepMaxNumberTextView"
                        android:layout_height="fill_parent"
                        android:id="@+id/del"
                        android:text="@string/del_c"
                        android:textSize="@dimen/default_text_size_header"
                        android:onClick="onDelClick"
                        oak:font="Roboto-Thin.ttf"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <oak.widget.TextViewWithFont
            style="@style/FillWidth"
            android:id="@+id/copy_text"
            android:layout_alignParentTop="true"
            android:background="@color/uva_blue"
            android:gravity="center_horizontal"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/tap_to_copy"
            android:textColor="@color/uva_orange"
            android:textSize="@dimen/default_text_size"
            oak:font="Roboto.ttf"/>
    <ScrollView
            style="@style/FillWidth"
            android:layout_below="@id/copy_text"
            android:layout_above="@id/numbers_container"
            android:gravity="center_vertical">
        <LinearLayout
                style="@style/FillWidth"
                android:orientation="vertical">
            <LinearLayout
                    style="@style/FillWidth"
                    android:gravity="center_vertical">
                <com.doomonafireball.repmaxcalculator.widget.RepMaxView
                        style="@style/EqualLlContainer"
                        android:id="@+id/lbs_input"
                        android:tag="@string/lbs_input"
                        repmaxcalculator:header="@string/lbs_input"/>
                <com.doomonafireball.repmaxcalculator.widget.RepMaxView
                        style="@style/EqualLlContainer"
                        android:id="@+id/kg_input"
                        android:tag="@string/kg_input"
                        repmaxcalculator:header="@string/kg_input"/>
            </LinearLayout>
            <LinearLayout
                    style="@style/FillWidth"
                    android:gravity="center_vertical">
                <com.doomonafireball.repmaxcalculator.widget.RepMaxView
                        style="@style/EqualLlContainer"
                        android:id="@+id/kg_converted"
                        android:tag="@string/kg_converted"
                        repmaxcalculator:header="@string/kg_converted"/>
                <com.doomonafireball.repmaxcalculator.widget.RepMaxView
                        style="@style/EqualLlContainer"
                        android:id="@+id/lbs_converted"
                        android:tag="@string/lbs_converted"
                        repmaxcalculator:header="@string/lbs_converted"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>