<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        style="@style/FillWidth"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:oak="http://oak/oak/schema"
        android:orientation="vertical"
        android:background="@drawable/abs__dialog_full_holo_dark">
    <oak.widget.TextViewWithFont
            style="@style/FillWidth"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:drawableLeft="@drawable/ic_menu_info_details"
            android:drawablePadding="8dp"
            android:text="@string/rep_max_formulas"
            android:textSize="22sp"
            android:textColor="@color/abs__holo_blue_light"
            oak:font="Roboto.ttf"/>
    <View
            style="@style/FillWidth"
            android:layout_height="2dp"
            android:background="@color/abs__holo_blue_light"/>
    <ScrollView
            style="@style/FillWidth"
            android:fillViewport="true"
            android:scrollbars="none">
        <LinearLayout
                style="@style/FillWidth"
                android:orientation="vertical">
            <oak.widget.TextViewWithFont
                    style="@style/FillWidth"
                    android:id="@+id/about_text"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/rep_max_formulas_text"
                    android:textSize="@dimen/default_text_size"
                    android:textColor="@color/white"
                    oak:font="Roboto.ttf"/>
            <oak.widget.TextViewWithFont
                    style="@style/InfoHeaderTextView"
                    android:text="@string/brzycki"
                    oak:font="Roboto-Bold.ttf"/>
            <ImageView
                    style="@style/InfoImageView"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/brzycki"
                    android:src="@drawable/img_rm_formula_brzycki"/>
            <oak.widget.TextViewWithFont
                    style="@style/InfoHeaderTextView"
                    android:text="@string/epley"
                    oak:font="Roboto-Bold.ttf"/>
            <ImageView
                    style="@style/InfoImageView"
                    android:contentDescription="@string/epley"
                    android:src="@drawable/img_rm_formula_epley"/>
            <oak.widget.TextViewWithFont
                    style="@style/InfoHeaderTextView"
                    android:text="@string/lander"
                    oak:font="Roboto-Bold.ttf"/>
            <ImageView
                    style="@style/InfoImageView"
                    android:contentDescription="@string/lander"
                    android:src="@drawable/img_rm_formula_lander"/>
            <oak.widget.TextViewWithFont
                    style="@style/InfoHeaderTextView"
                    android:text="@string/lombardi"
                    oak:font="Roboto-Bold.ttf"/>
            <ImageView
                    style="@style/InfoImageView"
                    android:contentDescription="@string/lombardi"
                    android:src="@drawable/img_rm_formula_lombardi"/>
            <oak.widget.TextViewWithFont
                    style="@style/InfoHeaderTextView"
                    android:text="@string/mayhew"
                    oak:font="Roboto-Bold.ttf"/>
            <ImageView
                    style="@style/InfoImageView"
                    android:contentDescription="@string/mayhew"
                    android:src="@drawable/img_rm_formula_mayhew"/>
            <oak.widget.TextViewWithFont
                    style="@style/InfoHeaderTextView"
                    android:text="@string/o_conner"
                    oak:font="Roboto-Bold.ttf"/>
            <ImageView
                    style="@style/InfoImageView"
                    android:contentDescription="@string/o_conner"
                    android:src="@drawable/img_rm_formula_oconner"/>
            <oak.widget.TextViewWithFont
                    style="@style/InfoHeaderTextView"
                    android:text="@string/wathan"
                    oak:font="Roboto-Bold.ttf"/>
            <ImageView
                    style="@style/InfoImageView"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/wathan"
                    android:src="@drawable/img_rm_formula_wathan"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>