<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        style="@style/FillWidth"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:oak="http://oak/oak/schema"
        android:orientation="vertical"
        android:background="@drawable/abs__dialog_full_holo_dark">
    <oak.widget.TextViewWithFont
            style="@style/FillWidth"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:drawableLeft="@drawable/ic_menu_info_details"
            android:drawablePadding="8dp"
            android:text="@string/about_rep_max_calculator"
            android:textSize="22sp"
            android:textColor="@color/abs__holo_blue_light"
            oak:font="Roboto.ttf"/>
    <View
            style="@style/FillWidth"
            android:layout_height="2dp"
            android:background="@color/abs__holo_blue_light"/>
    <ScrollView
            style="@style/FillWidth"
            android:fillViewport="true"
            android:scrollbars="none">
        <LinearLayout
                style="@style/FillWidth"
                android:orientation="vertical">
            <oak.widget.TextViewWithFont
                    style="@style/FillWidth"
                    android:id="@+id/about_text"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/about_text"
                    android:textSize="@dimen/default_text_size"
                    android:textColor="@color/white"
                    oak:font="Roboto.ttf"/>
            <oak.widget.TextViewWithFont
                    style="@style/FillWidth"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:autoLink="email"
                    android:gravity="center"
                    android:text="@string/about_dev"
                    android:textSize="@dimen/default_text_size"
                    android:textColor="@color/white"
                    oak:font="Roboto.ttf"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>